# nnfs-extreme

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
NNFS_Extreme/: CMakeLists.txt  NN.cpp  NN.hpp  NNFS_Extreme.cpp  NNFS_Extreme.h  NNFS_Extreme.hpp  Value.cpp  Value.hpp  activation_functions.cpp  activation_functions.hpp  data_loaders.cpp  data_loaders.hpp  utils.hpp
NNFS_Extreme/examples/: standard_mnist.hpp
scripts/: mnist_extractor.py  pixelarray_to_image.py
